--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,7 +91,7 @@ jobs:
             set -e
             TEST_FILES=$(circleci tests glob "tests/**/test_*.py" | circleci tests split --split-by=timings)
             echo $TEST_FILES
-            poetry run nox -- -s tests -- $TEST_FILES
+            poetry run nox -- -s tests -- $TEST_FILES --junitxml=test-results/junit.xml
       - save_cache:
           paths:
             - << pipeline.parameters.nox-envs-path >>
