--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,12 +86,15 @@ jobs:
       - python/install-packages:
           pkg-manager: poetry
       - run:
-          name: Run
+          name: Pytest
           command: |
             set -e
             TEST_FILES=$(circleci tests glob "tests/**/test_*.py" | circleci tests split --split-by=timings)
             echo $TEST_FILES
             poetry run nox -- -s tests -- $TEST_FILES --junitxml=test-results/junit.xml
+      - run:
+          name: Coverage
+          command: poetry run nox -- -s coverage -- html
       - save_cache:
           paths:
             - << pipeline.parameters.nox-envs-path >>
@@ -99,25 +102,6 @@ jobs:
           key: test-cache-v<< pipeline.parameters.cache-version >>-{{ checksum "poetry.lock" }}
       - store_test_results:
           path: test-results
-  coverage:
-    docker:
-      - image: cimg/python:<< pipeline.parameters.image-tag >>
-    parallelism: 4
-    steps:
-      - checkout
-      - restore_cache:
-          keys:
-            - test-cache-v<< pipeline.parameters.cache-version >>-{{ checksum "poetry.lock" }}
-      - python/install-packages:
-          pkg-manager: poetry
-      - run:
-          name: Run
-          command: poetry run nox -- -s coverage -- html
-      - save_cache:
-          paths:
-            - << pipeline.parameters.nox-envs-path >>
-            - << pipeline.parameters.venv-path >>
-          key: test-cache-v<< pipeline.parameters.cache-version >>-{{ checksum "poetry.lock" }}
       - store_artifacts:
           path: htmlcov
   typing:
@@ -156,9 +140,6 @@ workflows:
           context:
             - context
       - test:
-          context:
-            - context
-      - coverage:
           context:
             - context
       - typing:
