pre-commit config no commits to main
main should not be edited manualy, need prs checks, etc

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,7 @@ repos:
   - hooks:
       - args:
           - --branch
-          - master
+          - main
         id: no-commit-to-branch
       - id: check-added-large-files
       - id: check-ast
