--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ python-crontab = "^2.6.0"
 python-telegram-bot = "^13.12"
 fastapi = "^0.78.0"
 uvicorn = "^0.18.1"
-ormar = "^0.11.2"
+ormar = "^0.12.0"
 psycopg2-binary = "^2.9.3"
 asyncpg = "^0.25.0"
 alembic = "^1.8.1"
@@ -31,6 +31,8 @@ python-multipart = "^0.0.5"
 jinja2 = "^3.1.2"
 markdown = "^3.4.1"
 gunicorn = "^20.1.0"
+sqlalchemy = "^1.4.38"
+py = "^1.11.0"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.15.3"
