--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,7 @@ jobs:
             - ./*
   docs-v2:
     executor: python-executor
+    parallelism: 4
     steps:
       - run:
           name: Run
@@ -57,6 +58,24 @@ jobs:
       - run:
           name: Run
           command: touch its-working.txt
+      - run:
+          name: Run
+          command: ls -al
+      - run:
+          name: Run
+          command: |
+            set -e
+            TEST_FILES=$(circleci tests glob "tests/**/test_*.py" | \
+              circleci tests split --split-by=timings)
+            echo $TEST_FILES
+            poetry run nox -- -s tests -- -m "not e2e" --cov-fail-under=0 \
+              --cov-report xml:coverage.xml $TEST_FILES
+      - run:
+          name: Upload to codecov
+          command: |
+            curl -Os https://uploader.codecov.io/latest/linux/codecov
+            chmod +x codecov
+            ./codecov --file /home/circleci/project/coverage.xml
       - persist_to_workspace:
           root: .
           paths:
