--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,7 @@ jobs:
     executor: python-executor
     parallelism: 4
     steps:
+      - checkout
       - restore_cache:
           keys:
             - >-
