--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,6 +77,7 @@ jobs:
           at: .
       - run:
           name: Run
+          shell: /bin/bash
           command: |
             poetry run nox -s coverage
             curl -Os https://uploader.codecov.io/latest/linux/codecov
