--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,6 +49,16 @@ jobs:
             poetry run nox -- -s tests -- -m "not e2e" --cov-fail-under=0 \
               --cov-report xml:coverage.xml $TEST_FILES
       - run:
+          name: Run
+          command: |
+            set -e
+            TEST_FILES=$(circleci tests glob "tests/**/test_*.py" | \
+              circleci tests split --split-by=timings)
+            echo $TEST_FILES
+            poetry run nox -- -s tests -- -m "not e2e" --cov-fail-under=0 \
+              $TEST_FILES
+            ls -al
+      - run:
           name: Upload to codecov
           command: |
             curl -Os https://uploader.codecov.io/latest/linux/codecov
