--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,15 +48,7 @@ jobs:
             echo $TEST_FILES
             poetry run nox -- -s tests -- -m "not e2e" --cov-fail-under=0 \
               --cov-report xml:coverage.xml $TEST_FILES
-      - run:
-          name: Run
-          command: |
-            set -e
-            TEST_FILES=$(circleci tests glob "tests/**/test_*.py" | \
-              circleci tests split --split-by=timings)
-            echo $TEST_FILES
-            poetry run nox -- -s tests -- -m "not e2e" --cov-fail-under=0 \
-              $TEST_FILES
+            cp .coverage .coverage.$CIRCLE_NODE_INDEX
             ls -al
       - run:
           name: Upload to codecov
