--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ jobs:
             poetry run nox -- -s tests -- -m "not e2e" --cov-fail-under=0 \
               --cov-report xml:coverage.xml $TEST_FILES
             mkdir workspace
-            cp .coverage .coverage.$CIRCLE_NODE_INDEX
+            cp .coverage workspace/.coverage.$CIRCLE_NODE_INDEX
             ls -al
       - persist_to_workspace:
           root: workspace
